# regex-matcher

./: .gitignore  README.md  jitpack.yml  pom.xml
.github/workflows/: maven.yml
src/main/cpp/: CMakeLists.txt  Dockerfile  build_lib_jni.sh  configs.cmake
src/main/cpp/jni/: CMakeLists.txt  hyperscan_wrapper.cc  hyperscan_wrapper.h  ir_sahab_regexmatcher_RegexMatcher.cc  ir_sahab_regexmatcher_RegexMatcher.h
src/main/java/ir/sahab/regexmatcher/: PatternMatcher.java  RegexMatcher.java
src/main/java/ir/sahab/regexmatcher/exception/: PatternPreparationException.java
src/test/java/ir/sahab/regexmatcher/: RegexMatcherTest.java
src/test/resources/: log4j.properties
